[package]
name = "ashley-buds"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { version = "0.11.4", features = ["apigw_http", "tracing"] }
sailfish = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["trace"] }

[[bin]]
name = "root"
path = "src/functions/root.rs"

[[bin]]
name = "products"
path = "src/functions/products.rs"
